--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Javascript Quiz</title>
   </head>
   <body>
-    <nav id="highScore">Leaderboard</nav>
+    <a id="highScore" href="./leaderboard.html">Leaderboard</a>
     <div class="quiz">
       <h1>Start Quiz</h1>
       <p>To start the quiz, click the "Start" button. For every wrong selection the time will be reduced by 10 seconds.</p>
