feat:timer working, onclick working

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a id="highScore" href="./leaderboard.html">Leaderboard</a>
     <div class="quiz">
-      <h1>Start Quiz</h1>
+      <h1 id="quizQuestions">JavaScript Quiz</h1>
       <p>To start the quiz, click the "Start" button. For every wrong selection the time will be reduced by 10 seconds.</p>
       <button id="startGame">Start</button>
     </div>
