--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <a id="highScore" href="./leaderboard.html">Leaderboard</a>
-    <div class="quiz">
-      <h1 id="quizQuestions">JavaScript Quiz</h1>
-      <p>To start the quiz, click the "Start" button. For every wrong selection the time will be reduced by 10 seconds.</p>
+    <div id="quiz">
+      <h1 id="title">JavaScript Quiz</h1>
+      <p id="gameInstructions">To start the quiz, click the "Start" button. For every wrong selection the time will be reduced by 10 seconds.</p>
       <button id="startGame">Start</button>
+      <a id="questionResult"></a>
     </div>
-    <footer id="timer">Time:75</footer>
+    <footer id="timer">Time Remaining: 75</footer>
     <script src="./script.js"></script>
   </body>
 </html>
